Fix: too much negative space

--- a/assets/styles/page.css
+++ b/assets/styles/page.css
@@ -5,10 +5,24 @@ section.page {
   font-size: 3rem;
   font-weight: normal;
 
-  margin: 0px auto 0px 0px;
-  max-width: 800px;
   padding-left: 64px;
   padding-right: 64px;
+}
+
+section.page h2,
+section.page h3 {
+  margin-left: 0;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+section.page > * {
+  margin-left: auto;
+  max-width: 800px;
+}
+
+section.page > ul {
+  max-width: 700px;
 }
 
 section.page + section.page {
